bug 246403 : importing opera bookmarks breaks non-ASCII characters patch by  Pavel Cvrcek(cvrcek@czilla.cz) r=jshin, sr/a=ben